Minor architecture change
